force-app/main/default/objects/ENV_Var__mdt/fields/Datatype__c.field-meta.xml
<CustomField>
    <fullName>Datatype__c</fullName>
    <description>The datatype of this ENV var</description>
    <inlineHelpText>The datatype of this ENV var</inlineHelpText>
    <label>Datatype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
                <default>true</default>
                <label>String</label>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>