force-app/main/default/objects/ENV_Var__mdt/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>Grouping for this ENV Var</description>
    <inlineHelpText>Grouping for this ENV Var (best managed by UI)</inlineHelpText>
    <label>Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>