force-app/main/default/objects/ENV_Var__mdt/fields/Val__c.field-meta.xml
<CustomField>
    <fullName>Val__c</fullName>
    <label>Val</label>
    <type>TextArea</type>
</CustomField>