force-app/main/default/objects/ENV_Var__mdt/validationRules/ENSURE_VALUE_CONSISTENCY.validationRule-meta.xml
<ValidationRule>
    <fullName>ENSURE_VALUE_CONSISTENCY</fullName>
    <active>true</active>
    <description>Ensure that the Val__c field matches the first 255 characters of the long text val</description>
    <errorConditionFormula>LEFT( Value__c , 255) != Val__c</errorConditionFormula>
    <errorDisplayField>Val__c</errorDisplayField>
    <errorMessage>Val__c must match the first 255 characters of Value__c</errorMessage>
</ValidationRule>